[package]
name = "jensogkarsten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["multipart"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
uuid = { version = "1.6.1", features = ["v4"] }
