[package]
name = "jensogkarsten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["multipart"] }
axum-client-ip = "0.5.0"
chrono = "0.4.31"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
